--- a/assets/bibs/Wang2019AdvCAE.bib
+++ b/assets/bibs/Wang2019AdvCAE.bib
@@ -1,4 +1,4 @@
-@article{Wang2019109:AdvCAE,
+@article{Wang2019AdvCAE,
 title = "Adversarial correlated autoencoder for unsupervised multi-view representation learning",
 journal = "Knowledge-Based Systems",
 volume = "168",
